<resources>
    <string name="app_name">Fujifilm SDK</string>

    <string name="action_info">Info</string>
    <string name="pick_image_txt">Pick Image</string>
    <string name="cancel_txt">CANCEL</string>
    <string name="yes_text">YES</string>
    <string name="clear_all_txt">Clear all images?</string>
    <string name="add_url_title">Enter image URL</string>
    <string name="url_hint">image URL</string>
    <string name="add_txt">ADD</string>
    <string name="user_id_txt">User ID</string>
    <string name="promo_code_txt">Promo Code</string>
    <string name="launch_link_txt">Launch Link</string>
    <string name="settings_txt">SETTINGS</string>
    <string name="environment_txt">Environment</string>
    <string name="api_txt">API Key</string>
    <string name="add_url_txt">Add URL</string>
    <string name="clear_images_txt">Clear Images</string>
    <string name="done_txt">Done</string>
    <string name="order_txt">Order</string>
    <string name="preview_txt">Prev</string>
    <string name="production_txt">Prod</string>
    <string name="test_api_key">5cb79d2191874aca879e2c9ed7d5747c</string>
    <string name="ok_txt">OK</string>
    <string name="no_images_txt">No Images Added</string>
    <string name="no_apikey_txt">Please enter an api key</string>
    <string name="no_dev_url_txt">Please enter a Custom Dev URL</string>
    <string name="no_image_txt">Please select at least one image</string>
    <string name="spa_sdk_image_limit_warning">You have reached the image limit for the SPA SDK</string>
    <string name="no_images_clear_txt">You have no images to clear.</string>
    <string name="permission_denied_storage_msg">Fine! No images for you then!</string>
    <string name="invalid_apikey_msg">API key is invalid.</string>
    <string name="image_suffix">Image</string>
    <string name="images_suffix">Images</string>
    <string name="crash_toast_text">Oops ! I crashed!</string>
    <string name="crash_dialog_title">Fujifilm SPA SDK Sample App has crashed</string>
    <string name="crash_dialog_text">Please send a crash report to FSSD developers</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>
    <string name="custom_dev_url">Custom Dev URL</string>

    <string name="fatal_error_msg">Fatal error.</string>
    <string name="no_images_uploaded_msg">No images uploaded.</string>
    <string name="no_internet_msg">No internet connection.</string>
    <string name="invalid_api_key_msg">Invalid API key.</string>
    <string name="user_canceled_msg">User Canceled.</string>
    <string name="no_valid_images_msg">No valid images.</string>

    <string name="time_out_msg">User timed out</string>
    <string name="order_complete">Order Complete: %1$s</string>
    <string name="upload_failed">upload_failed.</string>
    <string name="retain_user_info_txt">Retain User Info</string>
    <string name="launch_options_txt">Launch Options</string>

    <string name="required_label_txt">Required</string>
    <string name="optional_label_txt">Optional</string>
    <string name="optional_prerendered_label_txt">Optional Pre-Rendered Products (See Documentation)</string>
    <string name="pick_prerendered_txt">Prerendered Products</string>
    <string name="page_label_txt">Page</string>
    <string name="catalog_label_txt">Catalog</string>
    <string name="product_label_txt">Product</string>
    <string name="enable_add_more_photos_txt">Enable Add More Photos</string>

    <string name="prerendered_product_1">"PRGC;823"</string>
    <string name="prerendered_product_2">"PRGC;830"</string>
    <string name="prerendered_product_3">"PRGift;4121"</string>
    <string name="prerendered_product_4">"PRGift;5212"</string>

    <string name="prerendered_product_1_name">"4x8 Greeting Card"</string>
    <string name="prerendered_product_2_name">"5x7 Greeting Card"</string>
    <string name="prerendered_product_3_name">"5x7 Stationery Card"</string>
    <string name="prerendered_product_4_name">"8x8 Superia Photo Book"</string>

    <string-array name="dropdown_pages">
        <item>Landing Page (Default)</item>
        <item>Cart</item>
        <item>Product</item>
    </string-array>

    <string-array name="dropdown_catalogs">
        <item>Mail Order</item>
        <item>Costco</item>
        <item>Rite Aid</item>
        <item>Sam\'s Club</item>
        <item>Walmart</item>
    </string-array>

    <string-array name="dropdown_products">
        <item>Product 1</item>
        <item>Product 2</item>
        <item>Product 3</item>
        <item>Product 4</item>
        <item>Product 5</item>
    </string-array>

    <string-array name="dropdown_prerendered">
        <item>@string/prerendered_product_1</item>
        <item>@string/prerendered_product_2</item>
        <item>@string/prerendered_product_3</item>
        <item>@string/prerendered_product_4</item>
    </string-array>

    <string-array name="dropdown_prerendered_names">
        <item>@string/prerendered_product_1_name</item>
        <item>@string/prerendered_product_2_name</item>
        <item>@string/prerendered_product_3_name</item>
        <item>@string/prerendered_product_4_name</item>
    </string-array>
</resources>
