<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/fuji_alternate_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <include layout="@layout/carousel_background" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.v4.view.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/txtview_image_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/fuji_transparent_background"
                android:gravity="center_vertical|right"
                android:padding="12dp"
                android:textColor="@android:color/white" />

        </FrameLayout>


        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dip"
            app:fillColor="@color/fuji_black"
            app:pageColor="@color/fuji_secondary_font_color"
            app:radius="4dp"
            app:strokeWidth="0dp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <RelativeLayout
            android:id="@+id/switch_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/toggle"
                android:layout_alignTop="@+id/toggle"
                android:text="@string/environment_txt"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fuji_text_size_medium" />


            <RadioGroup
                android:id="@+id/toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:checkedButton="@+id/test"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/live"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/radio_selector_left"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/live_txt"
                    android:textColor="@android:color/white" />

                <RadioButton
                    android:id="@+id/test"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/radio_selector_right"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/test_txt"
                    android:textColor="@android:color/white" />
            </RadioGroup>

        </RelativeLayout>

        <EditText
            android:id="@+id/apiKey"
            style="@style/Theme.Fujifilm.EditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch_container"
            android:hint="@string/api_txt"
            android:inputType="text"
            android:text="@string/test_api_key"
            android:textIsSelectable="false" />

        <EditText
        android:id="@+id/user_id"
        style="@style/Theme.Fujifilm.EditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/apiKey"
        android:hint="@string/user_id_txt"
        android:inputType="none" />

        <LinearLayout
            android:id="@+id/buttonPanel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            android:gravity="center">

            <Button
                android:id="@+id/add_url_btn"
                style="@style/Theme.Fujifilm.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_link_black_36dp"
                android:onClick="addURL"
                android:text="@string/add_url_txt" />

            <Button
                android:id="@+id/pick_image_btn"
                style="@style/Theme.Fujifilm.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_image_black_36dp"
                android:onClick="selectImages"
                android:text="@string/pick_image_txt" />

            <Button
                android:id="@+id/clear_images_btn"
                style="@style/Theme.Fujifilm.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_clear_black_36dp"
                android:onClick="clearImages"
                android:text="@string/clear_images_txt" />

            <Button
                android:id="@+id/order_btn"
                style="@style/Theme.Fujifilm.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_done_black_36dp"
                android:onClick="placeOrder"
                android:text="@string/done_txt" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
